@@ -12,6 +12,7 @@ import com.vimainsurance.vimaadmin.dto.DealsResponseDto;
 import com.vimainsurance.vimaadmin.dto.DocumentRequestDto;
 import com.vimainsurance.vimaadmin.dto.DocumentResponseDto;
 import com.vimainsurance.vimaadmin.dto.PolicyResponseDto;
+import com.vimainsurance.vimaadmin.dto.PolicyUploadRequestDto;
 import com.vimainsurance.vimaadmin.dto.ResponseDto;
 import com.vimainsurance.vimaadmin.repository.IDealsRepository;
 import com.vimainsurance.vimaadmin.repository.IDocumentRepository;
@@ -24,6 +25,9 @@ import com.vimainsurance.vimaadmin.entity.Deals;
 import com.vimainsurance.vimaadmin.entity.Document;
 import com.vimainsurance.vimaadmin.entity.AdminUser;
 import com.vimainsurance.vimaadmin.entity.Policy;
+import com.vimainsurance.vimaadmin.enums.CoverageType;
+import com.vimainsurance.vimaadmin.enums.ProductType;
+import com.vimainsurance.vimaadmin.enums.PolicyStatus;
 
 
 import java.util.UUID;
@@ -37,6 +41,7 @@ import org.springframework.core.io.InputStreamResource;
 import org.springframework.security.core.context.SecurityContextHolder;
 
 import java.io.InputStream;
+import java.time.LocalDateTime;
 
 import com.vimainsurance.vimaadmin.enums.AccountStatus;
 import com.vimainsurance.vimaadmin.enums.AccountType;
@@ -105,6 +110,7 @@ public class DealsServiceImpl implements IDealsService{
             deals.setCustId(dealsRequestDto.getCustId());
             deals.setCreatedAt(dealsRequestDto.getCreatedAt());
             deals.setUpdatedAt(dealsRequestDto.getUpdatedAt());
+            deals.setPrimaryIndividual(dealsRepository.findById(dealsRequestDto.getPrimaryIndividualId()).orElseThrow(() -> new RuntimeException("Primary individual not found")));
             dealsRepository.save(deals);
             logger.info("[correlationId:{}] createDeals success", MDC.get("correlationId"));
             return responseObj.render(responseObj.formSuccessResponse(Constants.SUCCESS, Constants.SAVE_SUCCESS));
@@ -214,9 +220,11 @@ public class DealsServiceImpl implements IDealsService{
             
             // Map deals to response DTOs with pre-fetched policies
             for(Deals deal : deals){
-                DealsResponseDto dealsResponseDto = mapDealToResponseDto(deal);
-                dealsResponseDto.setPolicies(policiesMap.getOrDefault(deal.getIndividualId(), new ArrayList<>()));
-                dealsResponseDtoList.add(dealsResponseDto);
+                if(deal.getIsPrimaryMember()){
+                    DealsResponseDto dealsResponseDto = mapDealToResponseDto(deal);
+                    dealsResponseDto.setPolicies(policiesMap.getOrDefault(deal.getIndividualId(), new ArrayList<>()));
+                    dealsResponseDtoList.add(dealsResponseDto);
+                }
             }
             return responseObj.render(responseObj.formSuccessResponse(Constants.SUCCESS, dealsResponseDtoList));
         }catch(Exception e){
@@ -247,14 +255,17 @@ public class DealsServiceImpl implements IDealsService{
         BaseResponse<List<DocumentResponseDto>> responseObj = new BaseResponse<>();
         try {
             // Optimized: Single query to get all documents for the individual
-            List<Document> allDocuments = documentRepository.findByEntityIdAndCategoryIn(
-                individualId.toString(), 
-                List.of(DocumentCategory.KYC_DOCUMENTS)
-            );
-            
-            List<DocumentResponseDto> responseDto = allDocuments.stream()
-                .map(this::mapDocumentToResponseDto)
-                .toList();
+            List<DocumentResponseDto> responseDto = documentRepository.findByEntityIdAndCategoryIn(individualId.toString(), List.of(DocumentCategory.KYC_DOCUMENTS, DocumentCategory.POLICY_DOCUMENTS, DocumentCategory.CLAIM_DOCUMENTS, DocumentCategory.OTHER)).stream().map(document -> {
+                DocumentResponseDto documentResponseDto = new DocumentResponseDto();
+                documentResponseDto.setDocumentType(document.getDocumentType());
+                documentResponseDto.setUploadedAt(document.getUploadedAt());
+                documentResponseDto.setDocumentMimeType(document.getMimeType());
+                documentResponseDto.setNotes(document.getNotes());
+                documentResponseDto.setDocumentId(document.getDocumentId().toString());
+                documentResponseDto.setDocumentName(document.getOriginalFilename());
+                documentResponseDto.setCategory(document.getDocumentCategory().getValue());
+                return documentResponseDto;
+            }).collect(Collectors.toList());
             return responseObj.render(responseObj.formSuccessResponse(Constants.SUCCESS, responseDto,responseDto.size()));
         } catch (Exception e) {
             logger.error("[correlationId:{}] Exception in getDocuments: {}", MDC.get("correlationId"), e.getMessage(), e);
@@ -275,7 +286,7 @@ public class DealsServiceImpl implements IDealsService{
             AdminUser agent = adminUser.get();
             requestDto.setUploadedBy(agent.getId());
             requestDto.setUploadedByRole(UserRole.fromValue(agent.getRole()));
-            ResponseEntity<ResponseDto<List<Document>>> response = documentService.uploadKYCDocuments(requestDto.getFiles(), individualId.toString(), DocumentEntityType.INDIVIDUAL, DocumentType.fromValue(requestDto.getDocumentType()), requestDto.getUploadedBy(), requestDto.getUploadedByRole(), requestDto.getNotes());
+            ResponseEntity<ResponseDto<List<Document>>> response = documentService.uploadKYCDocuments(requestDto.getFiles(), individualId.toString(), DocumentEntityType.INDIVIDUAL, DocumentType.fromValue(requestDto.getDocumentType()), requestDto.getUploadedBy(), requestDto.getUploadedByRole(), requestDto.getNotes(), DocumentCategory.KYC_DOCUMENTS);
             if(response.getBody() != null && response.getBody().getErrorCode() != null){
                 return responseObj.render(responseObj.formErrorResponse(response.getBody().getMessage()));
             }
@@ -337,6 +348,8 @@ public class DealsServiceImpl implements IDealsService{
         documentResponseDto.setDocumentMimeType(document.getMimeType());
         documentResponseDto.setNotes(document.getNotes());
         documentResponseDto.setDocumentId(document.getDocumentId().toString());
+        documentResponseDto.setDocumentName(document.getOriginalFilename());
+        documentResponseDto.setCategory(document.getDocumentCategory().getValue());
         return documentResponseDto;
     }
     
@@ -387,6 +400,7 @@ public class DealsServiceImpl implements IDealsService{
         policyResponseDto.setProductType(policy.getProductType().name());
         policyResponseDto.setCoverageType(policy.getCoverageType().name());
         policyResponseDto.setStatus(policy.getStatus().name());
+        policyResponseDto.setCoveredIndividuals(policy.getCoveredIndividuals());
         policyResponseDto.setSumInsured(policy.getSumInsured());
         policyResponseDto.setPremiumAmount(policy.getPremiumAmount());
         policyResponseDto.setStartDate(policy.getStartDate());
@@ -396,6 +410,108 @@ public class DealsServiceImpl implements IDealsService{
         policyResponseDto.setCreatedAt(policy.getCreatedAt());
         policyResponseDto.setUpdatedAt(policy.getUpdatedAt());
         return policyResponseDto;
+    }
+
+    @Override
+    public ResponseEntity<ResponseDto<String>> uploadPolicyWithDetails(PolicyUploadRequestDto requestDto) {
+        logger.info("[correlationId:{}] uploadPolicyWithDetails called", MDC.get("correlationId"));
+        BaseResponse<String> responseObj = new BaseResponse<>();
+        try {
+            // Get current user
+            String uploadedBy = SecurityContextHolder.getContext().getAuthentication().getName();
+            Optional<AdminUser> adminUser = adminUserRepository.findByUsername(uploadedBy);
+            if(adminUser.isEmpty()){
+                return responseObj.render(responseObj.formErrorResponse("Agent not found"));
+            }
+            AdminUser agent = adminUser.get();
+            Deals primaryIndividual = dealsRepository.findById(requestDto.getIndividualId()).orElseThrow(() -> new RuntimeException("Primary individual not found"));
+            // Create and save dependents first
+            List<UUID> coveredIndividualIds = new ArrayList<>();
+            if (requestDto.getDependents() != null && !requestDto.getDependents().isEmpty()) {
+                for (DealsRequestDto dependentDto : requestDto.getDependents()) {
+                    // Create dependent as a new Deals entity
+                    Deals dependent = new Deals();
+                    dependent.setFirstName(dependentDto.getFirstName());
+                    dependent.setLastName(dependentDto.getLastName());
+                    dependent.setEmail(primaryIndividual.getEmail());
+                    dependent.setPhone(primaryIndividual.getPhone());
+                    dependent.setDateOfBirth(dependentDto.getDateOfBirth());
+                    dependent.setGender(dependentDto.getGender());
+                    dependent.setPanNumber(dependentDto.getPanNumber());
+                    dependent.setAadhaarNumber(dependentDto.getAadhaarNumber());
+                    dependent.setAddress(primaryIndividual.getAddress());
+                    dependent.setCity(primaryIndividual.getCity());
+                    dependent.setState(primaryIndividual.getState());
+                    dependent.setPincode(primaryIndividual.getPincode());
+                    dependent.setAccountType(AccountType.RETAIL_DEPENDENT);
+                    dependent.setStatus(AccountStatus.ACTIVE);
+                    dependent.setEmployeeNumber(dependentDto.getEmployeeNumber());
+                    dependent.setRelationship(dependentDto.getRelationship());
+                    dependent.setIsPrimaryMember(false);
+                    dependent.setPrimaryIndividual(primaryIndividual);
+                    dependent.setCreatedAt(LocalDateTime.now());
+                    dependent.setUpdatedAt(LocalDateTime.now());
+                    
+                    // Save dependent
+                    Deals savedDependent = dealsRepository.save(dependent);
+                    coveredIndividualIds.add(savedDependent.getIndividualId());
+                    logger.info("[correlationId:{}] Dependent saved with ID: {}", MDC.get("correlationId"), savedDependent.getIndividualId());
+                }
+            }
+            
+            // Create Policy entity
+            Policy policy = new Policy();
+            policy.setPolicyNumber(requestDto.getPolicyNumber());
+            policy.setPrimaryIndividualId(requestDto.getIndividualId());
+            policy.setInsuranceProviderId(UUID.randomUUID()); // Default provider ID
+            policy.setInsuranceProductId(UUID.randomUUID()); // Default product ID
+            policy.setOrganizationId(UUID.randomUUID()); // Default organization ID
+            policy.setProductType(ProductType.valueOf(requestDto.getProductType()));
+            policy.setCoverageType(CoverageType.valueOf(requestDto.getCoverageType()));
+            policy.setStatus(PolicyStatus.valueOf(requestDto.getStatus()));
+            policy.setCoveredIndividuals(coveredIndividualIds);
+            policy.setSumInsured(requestDto.getSumInsured());
+            policy.setPremiumAmount(requestDto.getPremiumAmount());
+            policy.setStartDate(requestDto.getStartDate());
+            policy.setEndDate(requestDto.getEndDate());
+            policy.setRenewalDate(requestDto.getRenewalDate());
+            policy.setLeadId(requestDto.getIndividualId()); // Use individualId as leadId
+            policy.setCreatedAt(LocalDateTime.now());
+            policy.setUpdatedAt(LocalDateTime.now());
+            // Save policy to database
+            Policy savedPolicy = policyRepository.save(policy);
+            logger.info("[correlationId:{}] Policy saved with ID: {}", MDC.get("correlationId"), savedPolicy.getPolicyId());
+            
+            // Upload documents if provided
+            if (requestDto.getFiles() != null && requestDto.getFiles().length > 0) {
+                DocumentRequestDto documentRequest = new DocumentRequestDto();
+                documentRequest.setFiles(requestDto.getFiles());
+                documentRequest.setDocumentType(requestDto.getDocumentType());
+                documentRequest.setNotes(requestDto.getNotes());
+                documentRequest.setUploadedBy(agent.getId());
+                documentRequest.setUploadedByRole(com.vimainsurance.vimaadmin.enums.UserRole.fromValue(agent.getRole()));
+                
+                ResponseEntity<ResponseDto<List<Document>>> documentResponse = documentService.uploadKYCDocuments(
+                    documentRequest.getFiles(), 
+                    requestDto.getIndividualId().toString(), 
+                    com.vimainsurance.vimaadmin.enums.DocumentEntityType.POLICY, 
+                    com.vimainsurance.vimaadmin.enums.DocumentType.fromValue(requestDto.getDocumentType()), 
+                    documentRequest.getUploadedBy(), 
+                    documentRequest.getUploadedByRole(), 
+                    documentRequest.getNotes(),
+                    com.vimainsurance.vimaadmin.enums.DocumentCategory.POLICY_DOCUMENTS
+                );
+                
+                if(documentResponse.getBody() != null && documentResponse.getBody().getErrorCode() != null){
+                    return responseObj.render(responseObj.formErrorResponse(documentResponse.getBody().getMessage()));
+                }
+            }
+            
+            return responseObj.render(responseObj.formSuccessResponse(Constants.SUCCESS, "Policy created and documents uploaded successfully"));
+        } catch (Exception e) {
+            logger.error("Exception in uploadPolicyWithDetails", e);
+            return responseObj.render(responseObj.formErrorResponse(e.getMessage()));
+        }
     }
 
 }
